syntax = "proto3";

package manager.v1;

option go_package = "github.com/dezh-tech/immortal/infrastructure/grpc_client";

service Report {
  rpc SendReport (SendReportRequest) returns (SendReportResponse);
}

message SendReportRequest {
  string event_id = 1;                                       
}

message SendReportResponse {
  bool success = 1;               
  optional string message = 2;        
}
